feat: initiate phone controller endpoints
