# docs/swagger.yaml
@@ -1,4 +1,31 @@
 definitions:
+  controllers.AllPhoneResponse:
+    properties:
+      brand:
+        example: Samsung
+        type: string
+        x-order: "1"
+      image_url:
+        example: ""
+        type: string
+        x-order: "5"
+      model:
+        example: Galaxy
+        type: string
+        x-order: "2"
+      phone_id:
+        example: 1
+        type: integer
+        x-order: "0"
+      price:
+        example: 10000
+        type: integer
+        x-order: "4"
+      release_date:
+        example: "2023-11-11T00:00:00+07:00"
+        type: string
+        x-order: "3"
+    type: object
   controllers.ChangePasswordInput:
     properties:
       confirm_new_password:
@@ -28,6 +55,18 @@ definitions:
       message:
         example: change password success
         type: string
+    type: object
+  controllers.CreateReviewInput:
+    properties:
+      rating:
+        example: 1
+        type: integer
+      review_text:
+        example: sample review text
+        type: string
+    required:
+    - rating
+    - review_text
     type: object
   controllers.LoginInput:
     properties:
@@ -67,6 +106,38 @@ definitions:
         type: object
         x-order: "1"
     type: object
+  controllers.PhoneByIDResponse:
+    properties:
+      brand:
+        example: Samsung
+        type: string
+        x-order: "1"
+      image_url:
+        example: ""
+        type: string
+        x-order: "5"
+      model:
+        example: Galaxy
+        type: string
+        x-order: "2"
+      phone_id:
+        example: 1
+        type: integer
+        x-order: "0"
+      price:
+        example: 10000
+        type: integer
+        x-order: "4"
+      release_date:
+        example: "2023-11-11T00:00:00+07:00"
+        type: string
+        x-order: "3"
+      reviews:
+        items:
+          $ref: '#/definitions/controllers.ReviewResponse'
+        type: array
+        x-order: "6"
+    type: object
   controllers.RegisterInput:
     properties:
       email:
@@ -103,13 +174,92 @@ definitions:
             example: john@example.com
             type: string
           role:
-            example: user
+            example: Admin
             type: string
           username:
             example: John
             type: string
         type: object
         x-order: "1"
+    type: object
+  controllers.ReviewResponse:
+    properties:
+      phone_id:
+        example: 1
+        type: integer
+      rating:
+        example: 9
+        type: integer
+      review_id:
+        example: 1
+        type: integer
+      review_text:
+        example: product is nice
+        type: string
+      user_id:
+        example: 1
+        type: integer
+    type: object
+  models.Comment:
+    properties:
+      comment_id:
+        type: integer
+      comment_text:
+        type: string
+      created_at:
+        type: string
+      likes:
+        items:
+          $ref: '#/definitions/models.Like'
+        type: array
+      review_id:
+        type: integer
+      user_id:
+        type: integer
+    type: object
+  models.Like:
+    properties:
+      comment_id:
+        type: integer
+      created_at:
+        type: string
+      like_id:
+        type: integer
+      review_id:
+        type: integer
+      user_id:
+        type: integer
+    type: object
+  models.Review:
+    properties:
+      comments:
+        items:
+          $ref: '#/definitions/models.Comment'
+        type: array
+        x-order: "5"
+      created_at:
+        type: string
+        x-order: "5"
+      likes:
+        items:
+          $ref: '#/definitions/models.Like'
+        type: array
+        x-order: "6"
+      phone_id:
+        type: integer
+        x-order: "1"
+      rating:
+        type: integer
+        x-order: "3"
+      review_id:
+        type: integer
+        x-order: "0"
+      review_text:
+        type: string
+        x-order: "4"
+      user_id:
+        type: integer
+        x-order: "2"
     type: object
 info:
   contact: {}
@@ -155,6 +305,85 @@ paths:
       summary: Login as user.
       tags:
       - Auth
+  /phones:
+    get:
+      description: Get a list of Phones
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/controllers.AllPhoneResponse'
+            type: array
+      summary: List all phones
+      tags:
+      - Phones
+  /phones/{phone_id}:
+    get:
+      description: Get phone details by ID
+      parameters:
+      - description: PhoneID
+        in: path
+        name: phone_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.PhoneByIDResponse'
+      summary: Get phone details by ID
+      tags:
+      - Phones
+  /phones/{phone_id}/reviews:
+    get:
+      description: Get all phone reviews by ID
+      parameters:
+      - description: PhoneID
+        in: path
+        name: phone_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Review'
+      summary: Get all phone reviews by its ID
+      tags:
+      - Phones
+    post:
+      description: Create phone review by ID
+      parameters:
+      - description: PhoneID
+        in: path
+        name: phone_id
+        required: true
+        type: string
+      - description: the body to create phone review
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.CreateReviewInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Review'
+      security:
+      - Bearer: []
+      summary: Create a phone review by its ID
+      tags:
+      - Phones
   /register:
     post:
       description: registering a user from public access.
@@ -175,4 +404,10 @@ paths:
       summary: Register a user.
       tags:
       - Auth
+securityDefinitions:
+  Bearer:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
