# middlewares/middlewares.go
@@ -10,9 +10,16 @@ import (
 
 func JwtAuthMiddleware() gin.HandlerFunc {
 	return func(c *gin.Context) {
+		bearerToken := c.GetHeader("Authorization")
+		if bearerToken == "" {
+				c.JSON(http.StatusUnauthorized, gin.H{"error": "Authorization header is missing"})
+				c.Abort()
+				return
+		}
+
 		err := token.TokenValid(c)
 		if err != nil {
-			c.String(http.StatusUnauthorized, err.Error())
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token."})
 			c.Abort()
 			return
 		}
